0.2.14

* task list added

0.2.13 2016-10-24

* A formal release to rely on latest Outthentic version

0.2.12 2016-10-24

* META.yml re-created after occasionally get lost

0.2.11 2016-10-24

* Update Readme so that metacpan show module name correctly.


0.2.10 2016-10-24

* Makes comments to remote tasks

0.2.9 2016-10-24

* Add task owner part to public remote tasks list

0.2.8 2016-10-24

* A hot fix for load ini for remote task

0.2.7 2016-10-24

* A hot fix for running public remote task

0.2.6 2016-10-24

* A release candidate on `remote tasks` feature

0.2.5 2016-10-20

* a formal release to require latest version of Outthentic

0.2.4 2016-10-10

* fix for `find: The relative path `local/bin' is included in the PATH environment variable, which is insecure in combination with the -execdir action of find.  Please remove that entry from $PATH`

0.2.3 2016-10-06

* run swat plugins via `plg run` command

0.2.2 2016-10-05

* an attempt to fix PAUSE "Database error" ( failed to add v. 0.2.1 )

0.2.1 2016-10-04

* made a trivial implementation of `plg man` command 

* cleared in documentation on two types of sparrow plugins - Swat and Outthentic

0.2.0 2016-10-04

* swat plugins get back to sparrow family!!!

* `task add` action now accept --host parameter to make it possible run swat plugins

0.1.22 2016-08-25

* generated tasks names should be unique in task box queue

0.1.21 2016-08-25

* task box - remove duplicate plugin install commands

* impove sparrow task execution output ( I love when it colours! ;)


0.1.20 2016-08-20
 
* make it again dependent on the latest version of Outthentic

0.1.19 2016-08-20

* make it again dependent on the latest version of Outthentic

0.1.19 2016-08-19

* make it again dependent on the latest version of Outthentic

0.1.18 2016-08-18

* make it again dependent on the latest version of Outthentic

0.1.17 2016-08-18

* requires latest version of Outthentic

0.1.16 2016-08-16
