@@ -609,6 +609,21 @@ Examples:
     $ sparrow task remove system disk-health
 
 
+=head3 Alternative task names notation
+
+When working with task you may use an alternative task names notation:
+
+    $project_name/$task_name
+
+Examples:
+
+    $ sparrow task run system/disk
+    $ sparrow task show system/disk
+    $ sparrow task remove system/disk
+    $ sparrow task ini system/disk
+    # so on ...
+
+
 =head2 Task boxes API
 
 Use this command to run task box
