@@ -1,6 +1,7 @@
 0.2.14
 
 * task list added
+* alternative task name notation
 
 0.2.13 2016-10-24
 
